{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 9,
  "lineage": "38464427-d30b-8d1c-5617-bf96d2312d48",
  "resources": [
    {
      "module": "module.newvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:323329925292:internet-gateway/igw-0bffce7975f31ca63",
            "id": "igw-0bffce7975f31ca63",
            "owner_id": "323329925292",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0507dfb2e56434e2f"
          },
          "dependencies": [
            "module.newvpc.aws_vpc.this",
            "module.newvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.newvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bffce7975f31ca63",
            "id": "r-rtb-04a4d54c50e5fdfeb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a4d54c50e5fdfeb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.newvpc.aws_internet_gateway.this",
            "module.newvpc.aws_route_table.public",
            "module.newvpc.aws_vpc.this",
            "module.newvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.newvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:323329925292:route-table/rtb-04a4d54c50e5fdfeb",
            "id": "rtb-04a4d54c50e5fdfeb",
            "owner_id": "323329925292",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-public"
            },
            "tags_all": {
              "Name": "-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0507dfb2e56434e2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.newvpc.aws_vpc.this",
            "module.newvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.newvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6a8e61431162b8a",
            "route_table_id": "rtb-04a4d54c50e5fdfeb",
            "subnet_id": "subnet-04a214c60297dce35"
          },
          "dependencies": [
            "module.newvpc.aws_route_table.public",
            "module.newvpc.aws_subnet.public",
            "module.newvpc.aws_vpc.this",
            "module.newvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078d97fcd924c98b4",
            "route_table_id": "rtb-04a4d54c50e5fdfeb",
            "subnet_id": "subnet-01444de27fea229c3"
          },
          "dependencies": [
            "module.newvpc.aws_route_table.public",
            "module.newvpc.aws_subnet.public",
            "module.newvpc.aws_vpc.this",
            "module.newvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.newvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:323329925292:subnet/subnet-04a214c60297dce35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.7.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a214c60297dce35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323329925292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-us-west-2a"
            },
            "tags_all": {
              "Name": "-public-us-west-2a"
            },
            "vpc_id": "vpc-0507dfb2e56434e2f"
          },
          "dependencies": [
            "module.newvpc.aws_vpc.this",
            "module.newvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:323329925292:subnet/subnet-01444de27fea229c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.7.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01444de27fea229c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323329925292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-us-west-2c"
            },
            "tags_all": {
              "Name": "-public-us-west-2c"
            },
            "vpc_id": "vpc-0507dfb2e56434e2f"
          },
          "dependencies": [
            "module.newvpc.aws_vpc.this",
            "module.newvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.newvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:323329925292:vpc/vpc-0507dfb2e56434e2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-090c1402057fe8ecc",
            "default_route_table_id": "rtb-093c7b0c90dd44d3f",
            "default_security_group_id": "sg-05f7b8912100224eb",
            "dhcp_options_id": "dopt-0cf66f2321e0b87f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0507dfb2e56434e2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093c7b0c90dd44d3f",
            "owner_id": "323329925292",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}